# yast-profile-manager

./: .cvsignore  .gitignore  RPMNAME  configure.in.in  yast2-profile-manager.spec.in
agent-scpm/conf/: scpm.scr
agent-scpm/doc/: Makefile.am  SCPM.html  Todo.txt  agent-scpm.html  scpm.html
agent-scpm/doc/autodocs/: .cvsignore  Makefile.am
agent-scpm/src/: .cvsignore  Makefile.am  SCPMAgent.cc  SCPMAgent.h  Y2CCSCPMAgent.cc  scdb.h  scdb_util.h  scpm.h  scpm_types.h
agent-scpm/testsuite/: README
agents/: cfg_scpm.scr
doc/: Makefile.am  TODO  dialog_main.html  dialog_options.html  dialog_profile_settings.html  dialog_switch.html  implementation.html  index.html  popup_progress.html  profile-manager.dia  specification.html
doc/API/: Makefile.am  README  classSCPM-members.html  classSCPM.html  index.html  scpm_8h-source.html  scpm_8h.html  scpm__types_8h-source.html  scpm__types_8h.html  structresource__info__t.html  structscpm__status__t.html  structswitch__info__t.html
doc/autodocs/: Makefile.am
doc/images/: Makefile.am
package/: yast2-profile-manager.changes  yast2-profile-manager.spec
profile-manager/: yast2-profile-manager.spec.in
profile-manager/agent-scpm/conf/: Makefile.am  scpm.scr
profile-manager/agent-scpm/doc/: Makefile.am  agent-scpm.html
profile-manager/agent-scpm/src/: SCPMAgent.cc  Y2CCSCPMAgent.cc
profile-manager/agent-scpm/testsuite/: Makefile.am
profile-manager/agents/: Makefile.am
profile-manager/doc/: Makefile.am  dialog_profile_settings.html  implementation.html  index.html  popup_add_profile.html  popup_introduction.html  popup_progress.html  profile-manager.dia
profile-manager/package/: yast2-profile-manager.changes
profile-manager/src/: Makefile.am  dialogs.ycp  profile_manager.ycp
profile-manager/testsuite/tests/: CheckFilesValidity.out  CheckFilesValidity.ycp  CheckNameValidity.out  CheckNameValidity.ycp  GetProfile.out  GetProfile.ycp  GetProfilesAsItems.out  GetProfilesAsItems.ycp  GetProgressText.out  SetSaveFlag.out  SetSaveFlag.ycp  ShowChanges.out  ShowChanges.ycp
src/: Makefile.am  ProfileManager.ycp  complex.ycp  dialogs.ycp  helps.ycp  profile-manager.desktop  profile-manager.y2cc  profile-manager.ycp  profile-manager_auto.ycp  profile-manager_proposal.ycp  profile-manager_write.ycp  routines.ycp  wizards.ycp
src/clients/: profile-manager.rb  profile-manager.ycp  profile_manager.rb  profile_manager.ycp
src/desktop/: profile-manager.desktop
src/include/profile-manager/: complex.rb  dialogs.rb  dialogs.ycp  helps.rb  wizards.rb  wizards.ycp
src/modules/: ProfileManager.rb  ProfileManager.ycp
src/scrconf/: cfg_scpm.scr
testsuite/tests/: AddProfile.out  AddProfile.ycp  CheckFilesValidity.out  CheckFilesValidity.ycp  CheckNameValidity.out  CheckNameValidity.rb  CheckNameValidity.ycp  GetProfile.out  GetProfile.ycp  GetProfilesAsItems.out  GetProfilesAsItems.ycp  GetProgressText.rb  GetProgressText.ycp  GetResourcesAsItems.out  GetResourcesAsItems.ycp  ModifiedSettings.out  ModifiedSettings.ycp  SetProfile.out  SetProfile.ycp  SetSaveFlag.out  SetSaveFlag.ycp  ShowChanges.out  ShowChanges.ycp  Switch.out  Switch.ycp
