#
# Makefile.am for devtools/devtools/skeletons/config/src
#

yncludedir = @yncludedir@/profile-manager

client_DATA =			\
	profile-manager.ycp		\
	profile-manager_auto.ycp	\
	profile-manager_proposal.ycp	\
	profile-manager_write.ycp

ynclude_DATA =			\
	helps.ycp		\
	wizards.ycp		\
	dialogs.ycp		\
	complex.ycp		\
	routines.ycp

config_DATA =			\
	profile-manager.y2cc

module_DATA =			\
	ProfileManager.ycp

EXTRA_DIST = $(client_DATA) $(ynclude_DATA) $(config_DATA) $(module_DATA)
